@@ -1,2 +1,5 @@
 *SVN*
 
+* Add/refactor unit tests
+
+* Add documentation
